load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "handlers.go",
        "server.go",
        "structs.go",
        "helpers.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v4/beacon-chain/rpc/eth/light-client",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//beacon-chain/blockchain:go_default_library",
        "//beacon-chain/core/transition:go_default_library",
        "//beacon-chain/db:go_default_library",
        "//beacon-chain/rpc/eth/helpers:go_default_library",
        "//beacon-chain/rpc/eth/helpers/lightclient:go_default_library",
        "//beacon-chain/rpc/lookup:go_default_library",
        "//beacon-chain/rpc/apimiddleware:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//network/http:go_default_library",
        "//proto/eth/v1:go_default_library",
        "//proto/eth/v2:go_default_library",
        "//time/slots:go_default_library",
        "@com_github_ethereum_go_ethereum//common/hexutil:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_wealdtech_go_bytesutil//:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)
